syntax = "proto3";
package fof.v1;

import "google/api/annotations.proto";
import "fof/v1/common.proto";

option go_package = "github.com/viuts/fof/api/proto/v1;fofv1";

service LocationService {
  // Clear fog on the map (Send current location path for batching)
  rpc UpdateLocation(UpdateLocationRequest) returns (UpdateLocationResponse) {
    option (google.api.http) = {
      post: "/v1/location"
      body: "*"
    };
  }

  // Get the cleared area as GeoJSON for the current user
  rpc GetClearedArea(GetClearedAreaRequest) returns (GetClearedAreaResponse) {
    option (google.api.http) = {
      get: "/v1/location/cleared"
    };
  }

  // Get only fog statistics (area and percentage) without geometry
  rpc GetFogStats(GetFogStatsRequest) returns (GetFogStatsResponse) {
    option (google.api.http) = {
      get: "/v1/location/stats"
    };
  }
}

message GetFogStatsRequest {}

message GetFogStatsResponse {
  double cleared_area_meters = 1;
  double world_coverage_percentage = 2;
}

message GetClearedAreaRequest {
  double min_lat = 1;
  double min_lng = 2;
  double max_lat = 3;
  double max_lng = 4;
}

message GetClearedAreaResponse {
  string cleared_area_geojson = 1;
  double cleared_area_meters = 2;
  double world_coverage_percentage = 3;
}

message UpdateLocationRequest {
  repeated LatLng path = 1;
  double accuracy = 2;
}

message UpdateLocationResponse {}
